--- a/VMABB/src/main/resources/templates/newproposal.html
+++ b/VMABB/src/main/resources/templates/newproposal.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link th:href="@{/static/css/newproposal.css}" rel="stylesheet">
+	<link th:href="@{/css/newproposal.css}" rel="stylesheet">
 	<title>New Proposal Page</title>
 </head>
 
@@ -129,7 +129,7 @@
 		<br>
 		<br>
 	</form>
-	<script th:src="@{/static/js/newproposal.js}"></script>
+	<script th:src="@{/js/newproposal.js}"></script>
 </body>
 
 </html>
