--- a/VMABB/src/main/resources/templates/client_dashboard.html
+++ b/VMABB/src/main/resources/templates/client_dashboard.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Client Dashboard</title>
-	<link rel="stylesheet" th:href="@{/static/css/client_dashboard.css}">
+	<link rel="stylesheet" th:href="@{/css/client_dashboard.css}">
 </head>
 
 <body>
@@ -43,7 +43,7 @@
 	</ul>
 
 
-	<script th:src="@{/static/js/client-dashboard.js}"></script>
+	<script th:src="@{/js/client-dashboard.js}"></script>
 </body>
 
 </html>
