--- a/VMABB/src/main/resources/templates/client_dashboard.html
+++ b/VMABB/src/main/resources/templates/client_dashboard.html
@@ -6,9 +6,27 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Client Dashboard</title>
 	<link rel="stylesheet" th:href="@{/css/client_dashboard.css}">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<div class="container-fluid">
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" th:href="@{/logout}">Logout</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
 	<h1>Client Dashboard</h1>
 
 	<!-- Form for adding policies -->
@@ -38,7 +56,7 @@
 	<ul>
 		<li th:each="policy : ${policies}">
 			<!-- Display policy details -->
-			<span th:text="${policy.getToi()}"></span> - Holder: <span th:text="${policy.getName()}"></span>
+			<span th:text="${policy.getpolicyType()}"></span> - Holder: <span th:text="${policy.getpolicyHoldername()}"></span>
 		</li>
 	</ul>
 
