--- a/VMABB/src/main/resources/templates/approvedPolicies.html
+++ b/VMABB/src/main/resources/templates/approvedPolicies.html
@@ -56,7 +56,7 @@
 
 					<td th:text="${policy.status}"></td>
 
-					<td th:text="${policy.policyId}"></td>
+					<td id="policyId" th:text="${policy.policyId}"></td>
 
 				</tr>
 
