--- a/VMABB/src/main/resources/templates/pendingPolicies.html
+++ b/VMABB/src/main/resources/templates/pendingPolicies.html
@@ -10,7 +10,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link rel="stylesheet" href="/css/pendingPolicies.css"> <!-- Link to your CSS file -->
+	<link rel="stylesheet" href="/css/pendingPolicies.css"> 
 
 	<script src="/js/adminDashboard.js"></script>
 
@@ -49,8 +49,6 @@
 			</thead>
 
 			<tbody>
-
-				<!-- Use Thymeleaf to populate the table -->
 
 				<tr th:each="policy : ${pendingPolicies}">
 
