--- a/VMABB/src/main/resources/templates/rejectedPolicies.html
+++ b/VMABB/src/main/resources/templates/rejectedPolicies.html
@@ -10,7 +10,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link rel="stylesheet" href="/css/approvedPolicies.css"> <!-- Link to your CSS file -->
+	<link rel="stylesheet" href="/css/approvedPolicies.css"> 
 
 	<script src="/js/adminDashboard.js"></script>
 
@@ -48,7 +48,7 @@
 
 			<tbody>
 
-				<!-- Use Thymeleaf to populate the table -->
+				
 
 				<tr th:each="policy : ${rejectedPolicies}">
 
