--- a/VMABB/src/main/resources/templates/approvedPolicies.html
+++ b/VMABB/src/main/resources/templates/approvedPolicies.html
@@ -8,7 +8,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link rel="stylesheet" href="/css/approvedPolicies.css"> <!-- Link to your CSS file -->
+	<link rel="stylesheet" href="/css/approvedPolicies.css"> 
 
 	<script src="/js/adminDashboard.js"></script>
 
@@ -44,7 +44,6 @@
 
 			<tbody>
 
-				<!-- Use Thymeleaf or plain HTML/JavaScript to populate the table -->
 
 				<tr th:each="policy : ${approvedPolicies}">
 
